# QStickyNotes

./: CMakeLists.txt  QStickyNotes.desktop  QStickyNotes.desktop.in  README.md  cmake_uninstall.cmake.in
src/: config.h.in  main.cpp  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  stickynotewidget.cpp  stickynotewidget.h  traymanager.cpp  traymanager.h
translations/: qstickynotes_ru_RU.qm  qstickynotes_ru_RU.ts
